# recsys-mvp

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.airflow.yml  compose.api.yml  compose.pipeline.yml  compose.training.yml  compose.yml  feature_pipeline.Dockerfile  feature_store_offline_server.yaml  holdout.parquet  item_tags_from_llm.parquet  model_server.Dockerfile  pyproject.toml  requirements.txt  training.Dockerfile
api/: Dockerfile  load_examples.py  logging_utils.py  main.py  pydantic_models.py  utils.py
cfg/: run_cfg.py
feature_pipeline/: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.airflow.yml  compose.yml  pyproject.toml
feature_pipeline/airflow/dags/: append_oltp.py  docker_example_operator_dag.py
feature_pipeline/dags/: 99_docker_example_operator_dag.py  99_hello_world_dag.py  append_oltp.py  update_features.py
feature_pipeline/dbt/feast/: dbt_project.yml
feature_pipeline/dbt/feast/models/marts/amz_review_rating/: schema.yml  user_rating_stats.sql
feature_pipeline/dbt/feature_store/: dbt_project.yml
feature_pipeline/dbt/feature_store/models/marts/amz_review_rating/: parent_asin_rating_stats.sql  schema.yml  user_rating_stats.sql
feature_pipeline/dbt/feature_store/models/marts/user_tag_pref/: user_tag_pref_v1.sql  user_tag_pref_v1_features.sql
feature_pipeline/feature_store/feature_repo/: .feastignore  TROUBLESHOOT.md  feature_store.yaml  test_workflow.py
feature_pipeline/feature_store/feature_repo/parent_asin/: rating_stats.py
feature_pipeline/feature_store/feature_repo/user/: rating_stats.py  user_tag_pref.py
feature_pipeline/notebooks/: 00-append-holdout-to-oltp.py  001-simulate-oltp.ipynb  002-append-holdout-to-oltp.ipynb  003-undo-append.ipynb
init-db/: create-schemas.sh
llm/: cfg_mod.py  judge.py  tagger.py  tfm.py  utils.py
model_server/: service.py
notebooks/: 00-batch-reco-pipeline.py  00-full-pipeline.py  00-notebook-pipeline.py  00-training-pipeline.py  010-prep-item2vec.ipynb  011-item2vec.ipynb  012-ann-index.ipynb  012-batch-precompute.ipynb  013-batch-precompute.ipynb  013-store-batch-recs.ipynb  014-store-batch-recs.ipynb  014-store-user-item-sequence.ipynb  015-store-user-item-sequence.ipynb  016-sentence-transformers.ipynb  020-negative-sample.ipynb  021-sequence-modeling.ipynb  022-ranker.ipynb  030-error-analysis.ipynb  040-llm-playground.ipynb  040-retrieve-item-tags-from-llm.ipynb  999-test-papermill-driver.ipynb  999-test-papermill-second-notebook.ipynb  999-test-papermill.ipynb
scripts/: check_oltp_max_timestamp.py  get_holdout_user_id.py  get_user_id.py  scratchpad.sql
src/: ann.py  dataset.py  sample.py  viz.py
src/eval/: compare_runs.py
src/features/: tfm.py
src/ranker/: inference.py  model.py  negative_sampling.py  trainer.py  utils.py
src/sequence/: model.py  trainer.py  utils.py
src/skipgram/: inference.py  trainer.py
tests/: conftest.py
tests/functional/: test_ranker_functional.py  test_skipgram_functional.py
tests/unit/: test_ranker.py  test_skipgram.py
ui/: api_call.py  app.py  query.py  theme.py
