[tool.poetry]
name = "recsys-mvp"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.4.1"
pandas = "<2.2.0"  # <2.2.0 to be compatible with sqlalchemy<2.0, else error "AttributeError: 'Engine' object has no attribute 'cursor'"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
datasets = "^2.21.0"
pydantic = "^2.9.0"
scikit-learn = "^1.5.1"
evidently = "^0.4.37"
mlflow = "^2.16.0"
pytest = "^8.3.3"
onnx = "^1.16.2"
dill = "^0.3.8"
lightning = "^2.4.0"
redis = "^5.1.0"
fastapi = "^0.115.0"
bentoml = "^1.3.7"
numpy = "<2.0"  # Numpy 2.0 causes a lot of compatibility error
boto3 = "^1.35.37"
qdrant-client = "1.12.0"
sqlalchemy = "<2.0"  # <2.0 to be compatible with airflow 2.10.2
sentence-transformers = "^3.2.1"
openai = "^1.54.1"


[tool.poetry.group.training.dependencies]
papermill = "^2.6.0"
jupyterlab = "^4.2.5"  # Move from dev dependencies to here since we use papermill
tensorboard = "^2.18.0"


[tool.poetry.group.pipeline.dependencies]
apache-airflow = {extras = ["postgres"], version = "2.10.2"}
apache-airflow-providers-docker = "^3.14.0"
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"
psycopg2 = "^2.9.9"
feast = {extras = ["postgres"], version = "^0.40.1"}


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
black = "^24.8.0"
isort = "^5.13.2"
plotly = "^5.24.0"
xgboost = "^2.1.2"
shap = "^0.46.0"


[tool.poetry.group.ui.dependencies]
gradio = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
